# dark-coding-challenges

./: .dockerignore  .editorconfig  .env.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmessage.md  .gitmodules  .issue.md  .prettierignore  .prettierrc.toml  .swift-format  Cargo.toml  Dockerfile  Package.resolved  Package.swift  README.md  algoexpert.ts  analysis_options.yaml  app.config.ts  build.gradle.kts  build.zig  build.zig.zon  bun.lockb  bunfig.toml  composer.json  create.ts  docker-compose-latest.yml  drizzle.config.ts  fly.toml  go.mod  go.sum  gradlew  instrumentation.ts  larvel.config.ts  log.md  main.go  manage.py  next.config.ts  package.json  (+9 more)
.github/: ISSUE_TEMPLATE
.github/workflows/: duster-fix-blame.yml
.swiftpm/: config.json
advanced/: Grade.cs  advanced.sln
chat/: consumers.py  model.ts  models.py  routing.py  tests.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_initial.py
dark_coding_challenge/: __init__.py  asgi.py  auto_increment.py  celery.py  decorators.py  helpers.py  settings.py  urls.py  wsgi.py
dark_coding_challenges/: __init__.py  asgi.py  itertools.go  settings.py  urls.py  wsgi.py
database/migrations/: 0001_01_01_000000_create_users_table.php
easy/: BackspaceCompare.cs  ContainsDuplicate.cs  FindLargestAltitude.cs  HasCycle.cs  IsTreeSymmetric.cs  LeafCountInBinaryTree.cs  MajorityFrequencyGroup.cs  MaxDepth.cs  MaxStockProfit.cs  ReverseWordPrefix.cs  SmallerNumbersThanCurrent.cs  SmallestEvenMultiple.cs  SortByBits.cs  TreePathHasSum.cs  accept_into_movie.py  add_binary.go  add_binary.py  add_binary_test.go  add_two_integers.go  add_two_integers.py  age_to_days.py  armstrong_numbers.go  armstrong_numbers.py  armstrong_numbers_test.go  array_contains_duplicate.go  array_contains_duplicate.py  array_contains_duplicate_test.go  array_pair_sum.go  array_pair_sum.py  array_pair_sum_test.go  array_pop.py  backspace_compare.go  backspace_compare.py  backspace_compare_test.go  balanced_sums.py  basketball_points.py  binary_search.go  binary_search.py  calculate_fuel.py  can_construct_ransom_note.go  (+422 more)
lib/: coding_challenges.dart  dark_coding_challenges.dart
lib/easy/: add_two_integers.dart  array_contains_duplicate.dart  array_pair_sum.dart  backspace_compare.dart  can_construct_ransom_note.dart  can_make_arithmetic_progression.dart  check_perfect_number.dart  common_factors.dart  contains_duplicate.dart  contains_nearby_duplicate.dart  count_students.dart  create_counter.dart  day_of_the_week.dart  detect_capital_use.dart  difference_of_sums.dart  distribute_candies.dart  final_prices_with_discount.dart  find_content_children.dart  find_error_nums.dart  find_even_digit_numbers.dart  find_first_palindrome.dart  find_largest_altitude.dart  find_lucky.dart  find_max_consecutive_ones.dart  find_the_difference.dart  find_words_containing.dart  fizz_buzz.dart  get_array_concatenation.dart  has_cycle.dart  height_checker.dart  hour_glass_sum.dart  is_anagram.dart  is_boomerang.dart  is_pangram.dart  is_power_of_three.dart  is_same_tree.dart  is_tree_symmetric.dart  leaf_count_in_binary_tree.dart  license_key_formatting.dart  longest_palindrome.dart  (+50 more)
lib/medium/: array_stack.dart  can_be_prepared.dart  delete_linked_list_node.dart  find_duplicate_number.dart  frequency_sort.dart  (+16 more)
medium/: LevelOrderTraversal.cs  MinSubArray.cs  ReverseWordsInString.cs  array_stack.go  array_stack.py  array_stack_test.go  can_be_prepared.go  can_be_prepared.py  can_be_prepared_test.go  delete_linked_list_node.go  delete_linked_list_node.py  delete_linked_list_node_test.go  find_anagram.py  find_duplicate_number.go  find_duplicate_number.py  find_duplicate_number_test.go  frequency_sort.go  frequency_sort.py  level_order_traversal.go  level_order_traversal.py  masking_personally_identifiable_information.go  masking_personally_identifiable_information.py  masking_personally_identifiable_information_test.go  max_sub_array.go  max_sub_array.py  maximum_gap.go  maximum_gap.py  maximum_gap_test.go  maximum_manhattan_distance.go  maximum_manhattan_distance.py  maximum_manhattan_distance_test.go  min_sub_array.go  min_sub_array.py  pairs.py  remove_array_of_nodes_from_linked_list.go  remove_array_of_nodes_from_linked_list.py  remove_duplicate_letters.go  remove_duplicate_letters_test.go  reverse_integer.go  reverse_integer.py  (+30 more)
src/: MainApp.java  core.ts  dark_coding_challenges.app.src  dark_coding_challenges_app.erl  dark_coding_challenges_sup.erl  helpers.rs  helpers.zig  index.ts  main.rs  main.zig  module-info.java
templates/: base.html  search_results.html
test/: Pest.php  TESTING.md
users/: admin.py  forms.py  models.py  signals.py  thumbnail.py
very_easy/: array_sum.go  array_sum.py  array_sum_test.go  create_hello_world.go  create_hello_world.py  second_largest.go  second_largest.py  second_largest_test.go  temperature_converter.go  temperature_converter.py  temperature_converter_test.go  test_array_sum.py  test_second_largest.py
ziglings.org/: CONTRIBUTING.md  README.md  build.zig  main.sh
(+1665 files in other folders)
