[tool.poetry]
name = "dark-coding-challenges"
version = "0.1.0"
description = "coding challenges in python"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "dark_coding_challenges" }]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.0.0"
isort = "^5.13.2"
django = "^5.0.2"
pre-commit = "^3.6.2"
daphne = "^4.1.0"
python-dotenv = "^1.0.1"
dynaconf = "^3.2.4"

[tool.poetry.group.dev.dependencies]
numpy = "^1.26.4"
black = "^24.2.0"
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -vv"
python_functions = [
    'test_*',
    '*_test',
    'check_*',
    '*_check',
    'example_*',
    'suite_*',
    '*_example',
    '*_suite',
]
python_classes = [
    'Suite*',
    '*Suite',
    'Test*',
    '*Test',
    'Check*',
    '*Check',
    'Example*',
    '*Example',

]
python_files = [
    'test_*.py',
    '*_test.py',
    'check_*.py',
    '*_check.py',
    'example_*.py',
    'suite_*.py',
    '*_example.py',
    '*_suite.py',
]

testpaths = ['easy', 'medium']
[tool.isort]
profile = "black"
skip_gitignore = true
# verbose=true
virtual_env = "poetry"
honor_noqa = true
multi_line_output = 5

[tool.black]
line-length = 100
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
